fix: btn show more position on mobile

--- a/src/app/components/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list.component.scss
@@ -54,7 +54,6 @@
 .container {
   display: flex;
   justify-content: center;
-  height: calc(100vh - 670px); // 100% da viewport - 670px height pokelist
   padding-top: 20px;
   background: #000025;
 
